--- a/index.html
+++ b/index.html
@@ -58,19 +58,34 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                        <div class="col-xl-4 col-md-6">
+                        <div class="col-lg-5 col-12">
                             <div class="card mb-4">
-
+                                <img src="my_picture.jpg" class="card-img-top" alt="My picture">
                             </div>
                         </div>
-                        <div class="col-xl-4 col-md-6">
+                        <div class="col-lg-7 col-12">
                             <div class="card mb-4">
-
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="card mb-4">
-
+                                <div class="card-body">
+                                    <h5 class="card-title">Details</h5>
+                                    <table class="table">
+                                        <tr>
+                                            <th scope="row">Name</th>
+                                            <td>Poowis</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">Surname</th>
+                                            <td>Kumpai</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">Gender</th>
+                                            <td>Male</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">Age</th>
+                                            <td>19</td>
+                                        </tr>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -83,28 +98,30 @@
                 </div>
                 <div class="container">
                     <div class="card">
-                        <table class="table mb-0">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Level</th>
-                                    <th scope="col">School</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">Primary school</th>
-                                    <td>Prapamontree 2 School</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">High school</th>
-                                    <td>Triam Udom Suksa Pattanakarn School</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">University</th>
-                                    <td>King Mongkut's Institute of Technology Ladkrabang</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="card-body">
+                            <table class="table mb-0">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Level</th>
+                                        <th scope="col">School</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">Primary school</th>
+                                        <td>Prapamontree 2 School</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">High school</th>
+                                        <td>Triam Udom Suksa Pattanakarn School</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">University</th>
+                                        <td>King Mongkut's Institute of Technology Ladkrabang</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
