--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="javascript:void(0);">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
@@ -37,7 +37,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact me</span></a>
+                    <a class="nav-link" href="contact_me.html">Contact me</span></a>
                 </li>
             </ul>
         </div>
@@ -57,14 +57,12 @@
                     <h2 class="text-center text-light my-4">My information</h2>
                 </div>
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-12">
-                            <div class="card mb-4">
+                    <div class="card mb-4">
+                        <div class="row">
+                            <div class="col-lg-5 col-12">
                                 <img src="my_picture.jpg" class="card-img-top" alt="My picture">
                             </div>
-                        </div>
-                        <div class="col-lg-7 col-12">
-                            <div class="card mb-4">
+                            <div class="col-lg-7 col-12">
                                 <div class="card-body">
                                     <h5 class="card-title">Details</h5>
                                     <table class="table">
