--- a/contact_me.html
+++ b/contact_me.html
@@ -20,21 +20,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        My Profile
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="javascript:void(0);" data-target="#carousel" data-slide-to="0">My
-                            information</a>
-                        <a class="dropdown-item" href="javascript:void(0);" data-target="#carousel" data-slide-to="1">My
-                            education</a>
-                        <a class="dropdown-item" href="javascript:void(0);" data-target="#carousel" data-slide-to="2">My
-                            favorite foods</a>
-                        <a class="dropdown-item" href="javascript:void(0);" data-target="#carousel" data-slide-to="3">My
-                            favorite movies</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="my_profile.html">My Profile</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="javascript:void(0);">Contact me</span></a>
